--- a/tags.html
+++ b/tags.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tags</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css" >
-  <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.scc}" >
+  <link rel="stylesheet" href="static/css/me.css" th:href="@{/css/me.scc}" >
 
 </head>
 <body>
@@ -96,7 +96,7 @@
                 <div class="eleven wide column">
                   <div class="ui mini horizontal link list">
                     <div class="item">
-                      <img src="../static/images/icon.png" alt="" class="ui avatar image">
+                      <img src="static/images/icon.png" alt="" class="ui avatar image">
                     </div>
                     <div class="item">
                       <div class="content">
@@ -141,7 +141,7 @@
                 <div class="eleven wide column">
                   <div class="ui mini horizontal link list">
                     <div class="item">
-                      <img src="../static/images/icon.png" alt="" class="ui avatar image">
+                      <img src="static/images/icon.png" alt="" class="ui avatar image">
                     </div>
                     <div class="item">
                       <div class="content">
@@ -186,7 +186,7 @@
                 <div class="eleven wide column">
                   <div class="ui mini horizontal link list">
                     <div class="item">
-                      <img src="../static/images/icon.png" alt="" class="ui avatar image">
+                      <img src="static/images/icon.png" alt="" class="ui avatar image">
                     </div>
                     <div class="item">
                       <div class="content">
@@ -231,7 +231,7 @@
                 <div class="eleven wide column">
                   <div class="ui mini horizontal link list">
                     <div class="item">
-                      <img src="../static/images/icon.png" alt="" class="ui avatar image">
+                      <img src="static/images/icon.png" alt="" class="ui avatar image">
                     </div>
                     <div class="item">
                       <div class="content">
@@ -276,7 +276,7 @@
                 <div class="eleven wide column">
                   <div class="ui mini horizontal link list">
                     <div class="item">
-                      <img src="../static/images/icon.png" alt="" class="ui avatar image">
+                      <img src="static/images/icon.png" alt="" class="ui avatar image">
                     </div>
                     <div class="item">
                       <div class="content">
@@ -339,7 +339,7 @@
       <div class="three wide column">
         <div class="ui inverted link list">
           <div class="item">
-            <img src="../static/images/icon.png" th:src="@{/images/icon.png}"  class="ui rounded image" alt="" style="width: 110px">
+            <img src="static/images/icon.png" th:src="@{/images/icon.png}" class="ui rounded image" alt="" style="width: 110px">
           </div>
         </div>
       </div>
